styling/03 styling test/style.css
*{
	box-sizing: border-box;
}

body{
	background-color: #efefef;
}

nav{
	position: absolute;
	display: block;

	width: 80vw;
	height: 100vh;
	top: 0px;
	left: -95vw;
	padding: 0.5rem;

	background-color: #ee4d59;
	box-shadow: 0px 2px 15px rgba(0,0,0,0.25);
	z-index: 99;

	transition: 0.2s;
}

#navtoggle{
	position: fixed;
	display: block;
	cursor: pointer;
	overflow: hidden;

	width: 86px;
	height: 40px;
	top: 20px;
	left: 0px;
	padding-left: 0.5rem;
	padding-right: 0.5rem;

	background-color: #efefef;
	box-shadow: 0px 0px 15px rgba(0,0,0,.25);
	z-index: 98;

	font-size: 1rem;
	line-height: 40px;

	transition: 0.2s;
}

nav h2{
	text-align: center;
	font-size: 1.5rem;
	line-height: 1.8rem;
	color: #efefef;
}

.navsetting{
	position: relative;
	display: block;

	width: 100%;
	height: 40px;
	top: 0px;
	left: 0px;

	font-size: 1rem;
	line-height: 1.2rem;
	color: #efefef;
	font-weight: 500;
}

.navsettingtoggle{
	display: inline-block;
	position: absolute;

	right: -25px;
}


.dot{
	line-height: 18px;
}

input[type="checkbox"]{
	display: none;
}
input[type="checkbox"] + label span {
    display:inline-block;
    position: relative;
    width: 65px;
    height: 25px;

    background-color: #555;
    border-radius: 15px;
    box-shadow: inset 0px 2px 7px rgba(0,0,0,0.25);

    cursor: pointer;

    transition: 0.15s;
}
input[type="checkbox"]:checked + label span {
    background-color: #efefef;

    transition: 0.15s;
}
input[type="checkbox"] + label + .dot {
    display:inline-block;
    position: relative;
    width: 28px;
    height: 28px;
    left: -65px;
    top: -12.5px;

    background-color: #efefef;
    box-shadow: 0px 2px 7px rgba(0,0,0,0.2);
    border-radius: 100%;

    cursor: pointer;

    transition: 0.15s;
}
input[type="checkbox"]:checked + label + .dot {
    left: -36px;

    background-color: #555;

    transition: 0.15s;
}

#actionButton{
	display: block;
	position: fixed;
	cursor: pointer;

	width: 60px;
	height: 60px;
	bottom: 20px;
	right: 20px;

	background-color: #ee4d59;
	border-radius: 100%;
	box-shadow: 0px 2px 7px rgba(0,0,0,.25);

	text-align: center;
	color: #efefef;
	font-weight: 700;
	font-size: 3rem;
	line-height: 56px;

	transition: .25s;
}
#actionButton:hover{
	box-shadow: 0px 5px 15px rgba(0,0,0,.25);
	transition: .25s;
}
#actionButton:active{
	background-color: #efefef;

	color: #ee4d59;

	transition: .25s;
}


@media only screen and (min-width: 40rem){

	.dot{line-height: 16px;}

}



@media only screen and (min-width: 64rem){



}

